# rust-serverless-interface-template

./: Cargo.toml  README.md
src/: lib.rs
src/api/: schema.rs
