[package]
name = "serverless-interface-template"
version = "0.1.1"
edition = "2021"

[dependencies]
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.8", features = ["full"] }
http-body-util = { version = "0.1.2" }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "^1.34.0", features = ["full"] }
custom-logger = { git = "https://github.com/lmzuccarelli/rust-custom-logger", branch = "main", version = "0.1.4" }
bytes = "1.2"

[dev-dependencies]
tokio-test = "0.4.3"

[profile.dev]
opt-level = 0

[profile.release]
strip = true # Strip symbols from the binary
opt-level = "s" # Optimize for size
lto = true # Enable link-time optimization
codegen-units = 1 # Mazimize size reduction optimization

[lib]
name = "serverless_interface_template"
path = "src/lib.rs"
